[gd_scene load_steps=9 format=3 uid="uid://sd3esg30r6if"]

[ext_resource type="Script" path="res://src/characters/head.gd" id="1_xt1rq"]
[ext_resource type="Texture2D" uid="uid://dioqjw0jykt1g" path="res://assets/assets_characters/pumpkin-head.png" id="2_sy7de"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v8jud"]
atlas = ExtResource("2_sy7de")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxbn5"]
atlas = ExtResource("2_sy7de")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_apqth"]
atlas = ExtResource("2_sy7de")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umf3q"]
atlas = ExtResource("2_sy7de")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f6yq6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8jud")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxbn5")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apqth")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umf3q")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2u5pk"]
radius = 660.76

[node name="Head" type="CharacterBody2D"]
modulate = Color(0.807843, 0.807843, 0.807843, 1)
position = Vector2(-4, 0)
scale = Vector2(0.05, 0.05)
script = ExtResource("1_xt1rq")

[node name="HeadCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(70, 70)
sprite_frames = SubResource("SpriteFrames_f6yq6")
animation = &"idle"
frame_progress = 0.283152

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -460)
shape = SubResource("CircleShape2D_2u5pk")

[node name="HeadAttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="HeadCooldownTimer" to="." method="_on_head_cooldown_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
